<resources>
    <string name="app_name">WTM Montreal 2018</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="women_techmakers_montreal">Women Techmakers | Montreal 2018</string>
    <string name="powered_by">powered by GDG Montreal Android</string>
    <plurals name="speaker_detail">
        <item quantity="one">@string/speaker</item>
        <item quantity="other">@string/speakers</item>
    </plurals>
    <string name="speakers">Speakers</string>
    <string name="speaker" translatable="false">Speaker</string>
    <string name="sponsors">Sponsors</string>
    <string name="my_schedule">My Schedule</string>
    <string name="program">Program</string>
    <string name="information">Information</string>
    <string name="location">Location</string>
    <string name="twitter">Twitter</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>


    <string name="error_field_required">Require field</string>

    <string name="default_error_message">No internet connection</string>
    <string name="error_message_serveur_prob">Oops! A Server Error Has Occurred</string>
    <string name="retry_connection">Retry</string>


    <!-- Utils -->
    <!-- Update alert -->
    <string name="update_alert_force_title">Update</string>
    <string name="update_alert_force_message">Your application is too old, you must update to continue</string>
    <string name="update_alert_force_ok_button">Download</string>
    <string name="update_alert_force_cancel_button">Cancel</string>
    <string name="update_alert_title">Update</string>
    <string name="update_alert_message">A new version is available, do you want to download?</string>
    <string name="update_alert_ok_button">Yes</string>
    <string name="update_alert_cancel_button">No</string>
    <string name="bio">Bio</string>
    <string name="platinum">platinum</string>
    <string name="gold">gold</string>
    <string name="silver">silver</string>
    <string name="bronze">bronze</string>
    <string name="no_tweets">No Tweets</string>
    <string name="talk_added">This talk has been added to your schedule</string>
    <string name="talk_removed">This talk has been removed from the schedule</string>
    <string name="speaker_removed">This speaker\'s talk has been removed from the schedule</string>
    <string name="speaker_added">This speaker\'s talk has been added to the schedule</string>


    <string name="wtm_description"><![CDATA[<b>Women Techmakers</b> is a program created by Google to celebrate International Women\'s Day and to highlight the talent of women in technology. In 2018, we\'re organizing the third edition in Montreal as part of the special event  \"<b>The Women Techmakers Global Event Series Celebrating International Women\’s Day</b>\" (WTM IWD). This program has been in over 200 global events and seen across 52 countries. The main focus of this community-building initiative is to promote talented and passionate women, increase the visibility of the Montreal technology community and honour women in technology.]]></string>
    <string name="wtm_montreal_website"><![CDATA[Montreal website: <a href=\"http://www.wtmmontrea.com\">www.wtmmontreal.com</a>]]></string>
    <string name="wtm_global_website"><![CDATA[Global website: <a href=\"http://www.womentechmakers.com/iwd18\">www.womentechmakers.com/iwd18</a>]]></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="send">send</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit enim, imperdiet faucibus lacus ut, pretium faucibus ex.</string>
    <string name="login_required">Login required</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="please_login">In order to save your favorites</string>
    <string name="tweet_composer_text">#WomenTechmakers #IWD18 #WTM18 #WTMMontreal \n \n</string>
    <string name="tweet_search_query" translatable="false">#WomenTechmakers OR #IWD18 OR #WTM18 OR #WTMMontreal</string>
    <string name="tweet_share_talk">Check out Women Techmakers Montreal 2018 at #wtm: %s</string>
    <string name="wtm_twitter_handler" translatable="false">WTM_Montreal</string>
    <string name="loading">Loading…</string>
    <string name="rate_session">Rate session</string>z
    <string name="sessions">Session</string>
    <string name="wrapped_content" translatable="false"> (%s)</string>
</resources>
