<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_program"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/program" />
        <item
            android:id="@+id/nav_my_schedule"
            android:icon="@drawable/ic_favorite_black_24px"
            android:title="@string/my_schedule" />
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_group_black_24px"
            android:title="@string/speakers" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_sponsor"
            android:title="@string/sponsors" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_info_black_24px"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/information" />

        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_twitter_box"
            android:title="@string/twitter"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
